@@ -1,3 +1,7 @@
+Tue Feb 27 20:57:52 2001  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, drawer-widget.c: remove some dead code.
+
 Tue Feb 27 20:56:32 2001  George Lebl <jirka@5z.com>
 
 	* gnome-run.c: a bit of cleanup and set the file selection box
